# Ros_course

./: .gitignore  robot1_position.csv
src/position_to_csv/: CMakeLists.txt  package.xml
src/position_to_csv/launch/: position.launch
src/position_to_csv/src/: pos_saver.py
src/robotti_1/: CMakeLists.txt  package.xml
src/robotti_1/urdf/: robotti_1.urdf
src/robotti_5/: CMakeLists.txt  package.xml
src/samk_robowar_world/: package.xml
src/sensors_demo/: CMakeLists.txt  package.xml
src/sensors_demo/launch/: demo.launch  demo.launch.py
src/sensors_demo/parameters/: bridge.yaml
src/sensors_demo/urdf/: base.xacro  lidar.gazebo  materials.xacro  sonar.gazebo
src/some_name/: package.xml  setup.cfg  setup.py
src/some_other_name/: CMakeLists.txt  package.xml
