<?xml version="1.0"?>
<package format="3">
  <name>sensors_demo</name>
  <version>0.0.0</version>
  <description>The sensors_demo package</description>


  <maintainer email="izmo@todo.todo">izmo</maintainer>

  <license>TODO</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
